AWS devops professional

--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </div>
                     <div class="col-md-3">
                         <div class="skills_icon icon3 delay-03s animated wow zoomIn">
-                            <span></span>
+                            <img src="img/aws-devops-prof.png" alt="AWS-SysOps" />
                         </div>
                         <div class="skills_block">
                             <h3 class="animated fadeInUp wow">AWS Certified DevOps Engineer - Professional</h3>
                             <p class="animated fadeInDown wow">
-                                ?
+                                23 August 2024
                             </p>
                         </div>
                     </div>
@@ -303,7 +303,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                             ON, Canada </a></span>
                                         </li>
                                         <li>
-                                            <p><small class="text-muted"> Sep ~ Dec., 2024 (4 months)</small></p>
+                                            <p><small class="text-muted"> Sep.3 ~ Dec.20, 2024 (4 months)</small></p>
                                         </li>
                                     </ul>
                                 </div>
@@ -322,7 +322,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                             ON, Canada </a></span>
                                         </li>
                                         <li>
-                                            <p><small class="text-muted"> May ~ Aug., 2024 (4 months)</small></p>
+                                            <p><small class="text-muted"> May.6~ Aug.30, 2024 (4 months)</small></p>
                                         </li>
                                     </ul>
                                 </div>
