--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             </div>
         </div>
     </footer>
-    <script src="src/sections/skills-items.js"></script>
-    <script src="src/sections/experience-items.js"></script>
-    <script src="src/sections/portfolio-items.js"></script>
+    <script type="module" src="/src/sections/skills-items.js"></script>
+    <script type="module" src="/src/sections/experience-items.js"></script>
+    <script type="module" src="/src/sections/portfolio-items.js"></script>
     <!-- Add viewport meta tag for proper dark mode detection -->
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
