--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
       <script src="js/html5shiv.js"></script>
       <script src="js/html5element.js"></script>
     <![endif]-->
-  <script type="module" crossorigin src="./assets/main-0pUjNXYv.js"></script>
+  <script type="module" crossorigin src="./assets/main-XJgblLVa.js"></script>
 </head>
 
 <body>
