--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </div>
                 <nav class="navbar navbar-inverse" role="navigation">
                     <div class="navbar-header">
-                        <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span> <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+                        <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse"
+                            data-target="#main-nav">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span> <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
                     </div>
                     <div id="main-nav" class="collapse navbar-collapse navStyle">
                         <ul class="nav navbar-nav" id="mainNav">
@@ -98,7 +99,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                     <h2>Who Am I</h2>
 
                                     <h6>
-                                        "Let each person examine his own work, and then he can take pride in himself alone, and not compare himself with someone else." -- Galatians 6:4
+                                        "Let each person examine his own work, and then he can take pride in himself
+                                        alone, and not compare himself with someone else." -- Galatians 6:4
                                     </h6>
                                     <p>
 
@@ -155,9 +157,12 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 </div>
                                 <!-- /.col-md-6 -->
                                 <div class="col-md-6">
-                                    <h3>Majoring in Computer Science (2020-2025) at the University of Waterloo, Canada.</h3>
+                                    <h3>Majoring in Computer Science (2020-2025) at the University of Waterloo, Canada.
+                                    </h3>
                                     <p>
-                                        On the journey towards Statistics minor and AI specification, my passions and interests always lead me engaging in new technologies, like cloud computing and machine learning.
+                                        On the journey towards Statistics minor and AI specification, my passions and
+                                        interests always lead me engaging in new technologies, like cloud computing and
+                                        machine learning.
                                     </p>
 
                                     <ul class="about-us-list">
@@ -165,13 +170,16 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                             Programming languages: C, C++, c#, Java, R and Python
                                         </li>
                                         <li class="points">
-                                            Developer Tools: Pycharm, Eclipse, Jupyter Notebook, XCode, Visual studio, VSCode, Code Blocks, Robot Framework
+                                            Developer Tools: Pycharm, Eclipse, Jupyter Notebook, XCode, Visual studio,
+                                            VSCode, Code Blocks, Robot Framework
                                         </li>
                                         <li class="points">
-                                            Libraries: OpenCV, Tensorflow, PyTorch, Scikit-learn, Seaborn, Selenium, Pandas, Numpy, MatplotLib, PyTorch, OpenAIGym
+                                            Libraries: OpenCV, Tensorflow, PyTorch, Scikit-learn, Seaborn, Selenium,
+                                            Pandas, Numpy, MatplotLib, PyTorch, OpenAIGym
                                         </li>
                                         <li class="points">
-                                            DevOps: CI/CD, GitHub, CodeCommit, CodePipeline, Jenkins, Ansible, Docker, Kubernetes
+                                            DevOps: CI/CD, GitHub, CodeCommit, CodePipeline, Jenkins, Ansible, Docker,
+                                            Kubernetes
                                         </li>
                                         <li class="points">
                                             Database: PostgreSQL, MySQL, Aurora, MongoDB, DynamoDB
@@ -202,7 +210,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
         <div class="container">
             <h2>Skills</h2>
             <h6>
-                “The greatest scientific discovery was the discovery of ignorance.”-- Yuval Noah Harari, Homo Deus: A History of Tomorrow
+                “The greatest scientific discovery was the discovery of ignorance.”-- Yuval Noah Harari, Homo Deus: A
+                History of Tomorrow
             </h6>
             <div class="skills_wrapper">
                 <div class="row">
@@ -312,7 +321,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <!--/Portfolio Filters -->
 
             <!-- Portfolio Wrapper -->
-            <div class="isotope fadeInLeft animated wow grid" style="position: relative; overflow: hidden; height: 480px" id="portfolio_wrapper">
+            <div class="isotope fadeInLeft animated wow grid"
+                style="position: relative; overflow: hidden; height: 480px" id="portfolio_wrapper">
                 <!-- Portfolio Item -->
                 <figure style="
               position: absolute;
@@ -375,7 +385,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </div>
                     <figcaption>
                         <div>
-                            <a href="https://github.com/Darsboy/The-relationship-between-Covid-19-and-culture" class="fancybox">
+                            <a href="https://github.com/Darsboy/The-relationship-between-Covid-19-and-culture"
+                                class="fancybox">
                                 <h2>COVID <span>Stat</span></h2>
                                 <p>
                                     Culture vs covid 19
@@ -475,7 +486,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </div>
                     <figcaption>
                         <div>
-                            <a href="https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/" class="nav-link">
+                            <a href="https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/"
+                                class="nav-link">
                                 <h2>DEVMLOPS </h2>
                                 <p>
                                     DevOps + Machine Learning
@@ -485,29 +497,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </figcaption>
                 </figure>
                 <!--/Portfolio Item -->
-                <!-- Portfolio Item -->
-                <figure style="
-              position: absolute;
-              left: 0px;
-              top: 0px;
-              transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1);
-              width: 337px;
-              opacity: 1;
-            " class="portfolio-item one-four ML isotope-item effect-oscar">
-                    <div class="portfolio_img">
-                        <img src="img/realestate.jpeg" alt="Portfolio 1" />
-                    </div>
-                    <figcaption>
-                        <div>
-                            <a href="https://github.com/codejedi-ai/Boston-House-Price-Analysis" class="nav-link">
-                                <h2>RealEstate</h2>
-                                <p>
-                                    Performing linear regression on housing data
-                                </p>
-                            </a>
-                        </div>
-                    </figcaption>
-                </figure>
+
                 <!--/Portfolio Item -->
             </div>
             <!--/Portfolio Wrapper -->
@@ -538,12 +528,13 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
         <div class="container">
             <div class="footer_bottom">
                 <span>Copyright © 2015, Template by
-          <a href="http://webthemez.com">WebThemez.com</a>.
-        </span>
+                    <a href="http://webthemez.com">WebThemez.com</a>.
+                </span>
             </div>
         </div>
     </footer>
-
+    <div id="app"></div>
+    <script type="module" src="/src/index.tsx"></script>
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jquery-scrolltofixed.js"></script>
